@@ -1,4 +1,9 @@
 
+2016-01-23  Edward Hart <edward.dan.hart@gmail.com>
+
+	* screenio.c (cob_screen_attr): fixed bug #192 - stopped ERASE and BLANK
+	  being applied in ACCEPT statements.
+
 2016-01-17  Edward Hart <edward.dan.hart@gmail.com>
 
 	* screenio.c (get_screen_item_line_and_col): simplified and improved to
